[package]
name = "seer-p2p"
version = "0.1.0"
edition = "2024"
publish = false
description = "gossipsub publish to seer-summary/v1 via a bootstrap multiaddr. Native only."

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "=1.0.100"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.143"
futures = "=0.3.32"
tokio = { version = "=1.47.1", features = ["rt", "macros", "time"] }
libp2p = { version = "=0.56.0", default-features = false, features = [
    "tokio",
    "websocket",
    "tcp",
    "dns",
    "noise",
    "yamux",
    "gossipsub",
    "ping",
    "identify",
    "macros",
] }
