[package]
name = "tsot-card"
version = "0.1.0"
edition = "2021"
description = "TSOT card-level primitives shared at the source level between roam and ccg. No engine, no Lua, no FFI — just types that compile to every target."

# Library only. Consumed by `tsot` and `roam` via path dependency.
# Compiles independently into each project's wasm (they never share a
# wasm bundle — see roam/docs and ccg/CLAUDE.md).
[lib]
crate-type = ["rlib"]

[dependencies]
# Loosened from `=1.0.219` to `1.0.219` (range) to unblock Bevy 0.18
# adoption in roam — Bevy's transitives want serde ≥1.0.220, and the
# exact-pin was strictness for its own sake (serde 1.0.x is
# API-stable). ccg's own Cargo.toml keeps `=1.0.219` so ccg's lock
# still picks 1.0.219.
serde = { version = "1.0.219", features = ["derive"] }
