[package]
name = "tsot-card"
version = "0.1.0"
edition = "2021"
description = "TSOT card-level primitives shared at the source level between roam and ccg. No engine, no Lua, no FFI — just types that compile to every target."

# Library only. Consumed by `tsot` and `roam` via path dependency.
# Compiles independently into each project's wasm (they never share a
# wasm bundle — see roam/docs and ccg/CLAUDE.md).
[lib]
crate-type = ["rlib"]

[dependencies]
# Range pin (`1.0.219`, not exact) so Bevy's transitives (which want
# serde ≥1.0.220) can resolve. serde 1.0.x is API-stable.
serde = { version = "1.0.219", features = ["derive"] }
