[package]
name = "bevy_canvas_spike"
version = "0.1.0"
edition = "2024"
publish = false
exclude = ["dist"]

# Pattern lifted from NiklasEi/bevy_game_template (the canonical
# Bevy+trunk starter; 1.1k stars). Stripped of audio (bevy_kira_audio),
# mobile workspace, asset_loader, icon embedding — none needed for the
# canvas-attach spike. Profile config kept verbatim because it's the
# standard Bevy speedup recipe.

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "default_app",
    "2d_api",
    "2d_bevy_render",
    "ui_api",
    "ui_bevy_render",
    "scene",
    "bevy_winit",
    "default_font",
    "webgl2",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
